--- a/login_signup.html
+++ b/login_signup.html
@@ -130,7 +130,7 @@
                 <h2>Login to TaskFlow</h2>
                 <input type="email" placeholder="Email Address" required>
                 <input type="password" placeholder="Password" required>
-                <button type="submit">Login</button>
+                <button type="../user.html">Login</button>
                 <p>Don't have an account? <a href="#" onclick="showSignUp()">Sign Up</a></p>
             </form>
 
