--- a/dashboard/user.html
+++ b/dashboard/user.html
@@ -8,6 +8,7 @@
     <script src="user_dashboard.js" defer></script>
 </head>
 <body>
+    <button class="menu-toggle" id="menuToggle">☰ Menu</button>
     <div class="dashboard">
         <aside class="sidebar">
             <h2>User Dashboard</h2>
